--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ header {
     text-align: center;
 }
 
+.logo {
+    width: 100px;
+    height: auto;
+    margin-bottom: 10px;
+}
+
 #noticias {
     display: flex;
     flex-wrap: wrap;
